fnished work on transformations

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -21,6 +21,13 @@
   note = {Accessed 2019-06-27}
 }
 
+@misc{Stainless:pull470,
+  author = "The Stainless developers",
+  title = "Pull request 470: Type aliases, type members, and dependent function types",
+  url = {https://github.com/epfl-lara/stainless/pull/470},
+  note = {Accessed 2019-06-27}
+}
+
 
 @misc{BitcoinS:github,
   author = "{The bitcoin-s developers}",
