--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -912,7 +912,7 @@ the only constructor of Int64 ensures exactly that.
 \end{lstlisting}
 
 Stainless does not currently support a class with a type parameter
-with a type boundary that contains the class itself. We opened an
+with a type boundary that contains the type parameter itself. We opened an
 issue \cite{Stainless:issue519} on the Stainless repository and the
 Stainless developers have targeted Stainless version 0.4 to support
 such self-referential type boundaries.
